[gd_scene load_steps=3 format=3 uid="uid://b61hn36mh4yk5"]

[ext_resource type="Script" path="res://splash.gd" id="1_csltf"]
[ext_resource type="Texture2D" uid="uid://dudweovbqrybm" path="res://assets/1.png" id="3_moudn"]

[node name="splash" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_csltf")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="CenterContainer"]
visible = false
layout_mode = 2
texture = ExtResource("3_moudn")

[node name="jingleTimer" type="Timer" parent="."]
one_shot = true

[node name="gameStartTimer" type="Timer" parent="."]
wait_time = 7.0
one_shot = true

[connection signal="timeout" from="jingleTimer" to="." method="_on_jingle_timer_timeout"]
[connection signal="timeout" from="gameStartTimer" to="." method="_on_game_start_timer_timeout"]
